examples/test/testpolicy8847.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8847
  namespace: namespace128
spec:
  podSelector:
    matchLabels:
      key12: value11
      key49: value37
      key7: value36
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key49: value5
          key43: value20
      podSelector:
        matchLabels:
          key20: value35
